src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactIDs__c</fullName>
        <label>ContactIDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_of_Five__c</fullName>
        <label>Multiple of Five</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Opportunities__c</fullName>
        <label>Sum of Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <label>Weekday</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Number_8_Characters</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( AccountNumber) != 8</errorConditionFormula>
        <errorMessage>Account number must be 8 characters long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(AccountNumber)) &amp;&amp;  ISNUMBER(AccountNumber)</errorConditionFormula>
        <errorMessage>Account number should be numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Credit_Card_Number__c),NOT( REGEX( Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;)))</errorConditionFormula>
        <errorMessage>Credit Card number not valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Postal_Code_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(BillingCountry = &quot;USA&quot;, BillingCountry =
&quot;US&quot;),
NOT(REGEX(BillingPostalCode, &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
        <errorMessage>Billing postal code not valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mic_Pct_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   Mix_Pct__c &gt; 1.0,
   Mix_Pct__c &lt; 0.0
)</errorConditionFormula>
        <errorMessage>The percentage should be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_Of_Five_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>MOD(  Multiple_of_Five__c , 5) &lt;&gt; 0</errorConditionFormula>
        <errorMessage>Number should be a multiple of five</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weekday_Validation_Rules</fullName>
        <active>true</active>
        <errorConditionFormula>CASE(MOD( Weekday__c - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
        <errorMessage>Date must be a weekday</errorMessage>
    </validationRules>
</CustomObject>